infra/object-storage/garage/garage-infra/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-infra-s3
spec:
  hostnames:
    - s3.k8s.garden
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: garage-infra
          port: 3900
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
